🐛 fix(high contrast): high contrast style fix for accordion.

--- a/packages/assets/css/src/scss/_components/_accordion/_accordion-elements/_build-panel.scss
+++ b/packages/assets/css/src/scss/_components/_accordion/_accordion-elements/_build-panel.scss
@@ -46,6 +46,14 @@
 					border: $border-width-sm solid $color-extended-neutral-0;
 				}
 			}
+
+			@include modifier(flushed) {
+				@include modifies-element(panel) {
+					.sui-#{$block}__panel--content {
+						border: none;
+					}
+				}
+			}
 		}
 	}
 }
